update the foods
